# taxi_demand_predictor

.github/workflows/: feature_pipeline.yml  inference_pipeline.yml
taxi_demand_predictor/: .env  pyproject.toml  requirements.txt
taxi_demand_predictor/ .github/workflows/: feature_pipeline.yml
taxi_demand_predictor/data/transformed/: ts_data_2022_01.parquet
taxi_demand_predictor/models/: model.pkl
taxi_demand_predictor/notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgmb_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb
taxi_demand_predictor/notebooks/.github/: feature_pipeline.yaml
taxi_demand_predictor/src/: config.py  data.py  data_split.py  data_test.py  path.py  paths.py
