[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Michael Andres Mora P <michael.morapp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.31.0"
pyarrow = "^14.0.2"
plotly = "^5.18.0"
pandas = "^2.2.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
