[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Michael Andres Mora P <michael.morapp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.31.0"
pyarrow = "^14.0.2"
plotly = "^5.18.0"
pandas = "^2.2.2"
tqdm = "^4.66.2"
plotly-express = "^0.4.1"
jupyterlab = "^4.1.6"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
